<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            tools:context=".design.activity.DashboardActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llDashboardAppBarTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:background="@color/colorBlack"
                android:padding="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDashboardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/civDashboardProfilePic"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/dhruv_singh" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civDashboardProfilePic"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/_1sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvDashboardRides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/rides"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/tlDashboardTabLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llDashboardAppBarTitle" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlDashboardTabLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/tvDashboardFilter"
                app:layout_constraintStart_toEndOf="@+id/tvDashboardRides"
                app:layout_constraintTop_toBottomOf="@+id/llDashboardAppBarTitle">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tiDashboardNearest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nearest" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tiDashboardUpcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tiDashboardPast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/past" />

            </com.google.android.material.tabs.TabLayout>

            <TextView
                android:id="@+id/tvDashboardFilter"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/filters"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@mipmap/ic_filter"
                app:layout_constraintBottom_toBottomOf="@+id/tlDashboardTabLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llDashboardAppBarTitle" />

            <FrameLayout
                android:id="@+id/flDashboard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlDashboardTabLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llDashboardFilter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/filterBackground"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <View
                android:id="@+id/viewDashboardFilter"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_2sdp"
                    android:background="@color/colorBlack"
                    android:padding="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/tvDashboardFilterTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/_20sdp"
                        android:text="@string/filters"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/vDashboardFilterTitle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDashboardFilterTitle" />

                    <TextView
                        android:id="@+id/tvDashboardFilterState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@mipmap/state_city_background"
                        android:gravity="center_vertical"
                        android:hint="@string/states"
                        android:paddingStart="@dimen/_20sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/vDashboardFilterTitle" />

                    <TextView
                        android:id="@+id/tvDashboardFilterCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@mipmap/state_city_background"
                        android:gravity="center_vertical"
                        android:hint="@string/city"
                        android:paddingStart="@dimen/_20sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDashboardFilterState" />

                    <Button
                        android:id="@+id/btDashboardClear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/clear"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDashboardFilterCity" />

                    <Button
                        android:id="@+id/btDashboardSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/submit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDashboardFilterCity" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressCircular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>