<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llElementPopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search" />

        <View
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@color/colorBlack" />

        <EditText
            android:id="@+id/etElementPopUp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:capitalize="sentences"
            android:hint="@string/search"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ivElementPopupCancel"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_cross_black" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorBlack" />

    <TextView
        android:id="@+id/tvElementPopUpClearSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/clear_search"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:visibility="gone">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcElementPopUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvElementPopUpNoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:visibility="gone"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_20sdp"
            android:text="@string/no_data_found"
            android:textAllCaps="true"
            android:textColor="@color/teal_200"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</LinearLayout>