<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@color/colorBlack"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:padding="@dimen/_20sdp">

            <ImageView
                android:id="@+id/ivItemDataProfile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/img" />

            <TextView
                android:id="@+id/tvItemDataCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/item_text_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivItemDataProfile"
                tools:text="City name" />

            <TextView
                android:id="@+id/tvItemDataStateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/item_text_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivItemDataProfile"
                tools:text="State name" />

            <TextView
                android:id="@+id/tvItemDataRideNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/ride_no"
                android:textColor="@color/item_text_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataCityName" />

            <TextView
                android:id="@+id/tvItemDataRideNoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toEndOf="@+id/tvItemDataRideNo"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataCityName"
                tools:text="001" />

            <TextView
                android:id="@+id/tvItemDataOriginalStationNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/original_station_no"
                android:textColor="@color/item_text_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataRideNo" />

            <TextView
                android:id="@+id/tvItemDataOriginalStationNoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toEndOf="@+id/tvItemDataOriginalStationNo"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataRideNo"
                tools:text="001" />

            <TextView
                android:id="@+id/tvItemDataStationPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/station_path"
                android:textColor="@color/item_text_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataOriginalStationNo" />

            <TextView
                android:id="@+id/tvItemDataStationPathValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toEndOf="@+id/tvItemDataStationPath"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataOriginalStationNo"
                tools:text="[001, 002]" />

            <TextView
                android:id="@+id/tvItemDataDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/date"
                android:textColor="@color/item_text_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataStationPath" />

            <TextView
                android:id="@+id/tvItemDataDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toEndOf="@+id/tvItemDataDate"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataStationPath"
                tools:text="15th Feb 2022 16:33" />

            <TextView
                android:id="@+id/tvItemDataDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/distance"
                android:textColor="@color/item_text_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataDate" />

            <TextView
                android:id="@+id/tvItemDataDistanceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toEndOf="@+id/tvItemDataDistance"
                app:layout_constraintTop_toBottomOf="@+id/tvItemDataDate"
                tools:text="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>
